# AutoTool_Agent_Project

./: README.md  pyproject.toml
data/: sample.db  tasks.jsonl
data/logs/: trajectory_T001_0.json  trajectory_T001_2.json
reports/: latest_report.md
scripts/: make_data.py  run_benchmark.sh  run_single_task.sh
src/autotoolbench/: __init__.py  cli.py
src/autotoolbench.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/autotoolbench/agent/: adaptive_agent.py  budget.py  executor.py  planner.py  react_baseline.py  reflector.py  schema.py
src/autotoolbench/env/: datasets.py  sandbox.py  tasks.py  validators.py
src/autotoolbench/eval/: __init__.py  ablation.py  metrics.py  report.py  runner.py
src/autotoolbench/llm/: base.py  mock.py  openai_client.py
src/autotoolbench/tools/: __init__.py  base.py  file_tool.py  log_tool.py  noop_tool.py  python_tool.py  registry.py  run_tests_tool.py  sqlite_tool.py
test/: test_agent.py  test_agent_extra.py  test_eval.py  test_tools.py
